# CS101A_FinalProj

./: .gitignore  CMakeLists.txt  README.md  create_app_bundle.sh  test.cpp  train_ai.py
models/: best_model.pth  final_model.pth  model_ep500.pth
server/: server.js
src/: AIPlayer.cpp  AudioManager.cpp  Bullet.cpp  Bullet.hpp  CollisionSystem.cpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Maze.cpp  MazeGenerator.cpp  MultiplayerHandler.cpp  NetworkManager.cpp  Tank.cpp  Tank.hpp  TrainingManager.cpp  Utils.hpp  main.cpp
src/core/: Game.cpp  main.cpp
src/entities/: Bullet.cpp  Tank.cpp
src/include/: AIPlayer.hpp  AudioManager.hpp  Bullet.hpp  CollisionSystem.hpp  Enemy.hpp  Game.hpp  Maze.hpp  MazeGenerator.hpp  MultiplayerHandler.hpp  NetworkManager.hpp  RoundedRectangle.hpp  Tank.hpp  TrainingManager.hpp  UIHelper.hpp  Utils.hpp
src/include/core/: Game.hpp
src/include/entities/: Tank.hpp
src/include/network/: MultiplayerHandler.hpp  NetworkManager.hpp
src/include/systems/: AudioManager.hpp
src/include/utils/: Utils.hpp
src/include/world/: Maze.hpp  MazeGenerator.hpp
src/network/: MultiplayerHandler.cpp  NetworkManager.cpp
src/systems/: AudioManager.cpp  CollisionSystem.cpp
src/world/: Maze.cpp  MazeGenerator.cpp
